- https://github.com/eclipse-syson/syson/issues/1487[#1487] [explorer] Fix NPE thrown by `getTreePath` on Explorers defined with Sirius Tree APIs instead of Sirius View DSL APIs.
This issue was not visible in SysON but could appear in downstream applications defining explorers with the Sirius Tree APIs.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1452[#1452] [explorer] Contextual menu action "New objects from text" is now defined in the backend.
By default, it no longer appears for non-SysML semantic model elements.
Consumers may override this by providing an implementation of `org.eclipse.syson.tree.explorer.view.services.api.ISysONExplorerServiceDelegate.canCreateNewObjectsFromText(Object)`.
- https://github.com/eclipse-syson/syson/issues/1497[#1497] [database] Update the PostgreSQL version used in the docker image (used for tests purposes) to 15.
- https://github.com/eclipse-syson/syson/issues/1502[#1502] [libraries] Update standard libraries to SysMLv2 2025-07 specification.

=== New features

- https://github.com/eclipse-syson/syson/issues/1314[#1314] [diagrams] (Almost) All node descriptions are now synchronized (based on the exposed elements of ViewUsages).
This contribution allows to switch from one _ViewDefinition_ to another one in a _ViewUsage_ without having to re-create the diagram.

== v2025.8.0

=== Shapes

- Added a duplicate object menu item for SysMLv2 elements in the _Explorer_ view.
- Added a diagram tool to duplicate graphical nodes in diagrams.

=== Breaking changes
- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Aligned the metamodel with the SysMLv2 2025-04 specification released in April 2025 (see https://www.omg.org/spec/SysML/ for more details) and the KerML 2025-04 specification released in April 2025 (see https://www.omg.org/spec/KerML/ for more details).

**In any case, download all your existing models/projects and back up your database before upgrading to 2025.8.0 (as always).**
