@@ -70,6 +70,7 @@ This issue was not visible in SysON but could appear in downstream applications 
 
 - Fix action "New objects from text" being available on all semantic elements in the _Explorer_ view.
 Now it is only available on SysML model elements.
+- Fix library update performance and ensure it does not impact standard libraries.
 
 == Improvements
 
